# chancho

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
debian/: rules  (+4 more)
src/priv/: CMakeLists.txt
src/priv/com/chancho/: account.cpp  account.h  book.cpp  book.h  category.cpp  category.h  recurrent_transaction.cpp  recurrent_transaction.h  static_init.h  stats.cpp  stats.h  transaction.cpp  transaction.h  updater.cpp  updater.h  version.h.in
src/priv/com/chancho/book/: accounts.cpp  accounts.h  categories.cpp  categories.h  transactions.cpp  transactions.h
src/priv/com/chancho/system/: database.h  database_factory.cpp  database_factory.h  database_lock.h  query.h
src/public/cli/app/: CMakeLists.txt  main.cpp
src/public/gui/app/: CMakeLists.txt  apparmor.json  chancho.desktop.in  main.cpp  manifest.json.in  ui.qrc
src/public/gui/app/click/: CMakeLists.txt
src/public/gui/app/po/: CMakeLists.txt  chancho.mandel.pot  cs.po  de.po  el.po  es.po  fr.po  it.po  nl.po  pt.po  ro.po  uk.po
src/public/gui/app/qml/: MainWindow.qml
src/public/gui/app/qml/components/: AccountComponent.qml  AccountForm.qml  AccountsPage.qml  BillingPerDay.qml  BillingPerDayHeader.qml  CategoriesPage.qml  CategoryComponent.qml  CategoryForm.qml  CategoryHeaderComponent.qml  CategoryStatsPage.qml  ColorChooser.qml  DateHeaderComponent.qml  DefaultColors.qml  EditAccount.qml  EditCategory.qml  EditTransaction.qml  MainPage.qml  NewAccount.qml  NewCategory.qml  NewEntry.qml  NewTransaction.qml  RecurrentTransactionComponent.qml  RecurrentTransactionsPage.qml  RecurrentTransactionsPerCategory.qml  SplashScreen.qml  TransactionComponent.qml  TransactionForm.qml  Walkthrough.qml  WelcomeWizard.qml  WizardAccountsPage.qml  WizardCategoriesPage.qml  WizardLastPage.qml  ubuntu_component_store.json
src/public/gui/app/qml/components/accounts/: Account.qml  Edit.qml  Form.qml  New.qml  Page.qml
src/public/gui/app/qml/components/categories/: Category.qml  Edit.qml  Form.qml  New.qml  Page.qml  StatsPage.qml
src/public/gui/app/qml/components/dialogs/: ConfirmationDialog.qml  ErrorDialog.qml  RecurrenceDialog.qml  WizardNewAccountDialog.qml  WizardNewCategoryDialog.qml
src/public/gui/lib/: CMakeLists.txt
src/public/gui/lib/com/chancho/: book_model.cpp  book_model.h  chancho_app.cpp  chancho_app.h  day_model.cpp  day_model.h  month_model.cpp  month_model.h  transaction_model.cpp  transaction_model.h
tests/common/: CMakeLists.txt  base_testcase.cpp  base_testcase.h  book.h  database.h  database_factory.h  matchers.h  public_account.h  public_attachment.h  public_book.h  public_category.h  public_recurrence.h  public_recurrent_transaction.h  public_transaction.h  query.h
tests/priv/: CMakeLists.txt  test_account.cpp  test_account.h  test_attachment.cpp  test_attachment.h  test_book.cpp  test_book.h  test_book_account.cpp  test_book_account.h  test_book_category.cpp  test_book_category.h  test_book_mocked.cpp  test_book_mocked.h  test_book_recurrent_transaction.cpp  test_book_recurrent_transaction.h  test_book_threading.h  test_book_transaction.cpp  test_book_transaction.h  test_category.cpp  test_category.h  test_recurrence.cpp  test_recurrence.h  test_stats.cpp  test_stats.h  test_transaction.cpp  test_transaction.h  test_upgrader.cpp  test_upgrader.h
tests/priv/book/: CMakeLists.txt
tests/priv/book/mocked/: CMakeLists.txt  test_accounts_mocked.cpp  test_accounts_mocked.h  test_book_mocked.cpp  test_categories_mocked.cpp  test_categories_mocked.h  test_transactions_mocked.cpp  test_transactions_mocked.h
tests/priv/book/unmocked/: CMakeLists.txt  test_book_category.cpp  test_book_category.h  test_book_recurrent_transaction.cpp  test_book_recurrent_transaction.h  test_book_threading.cpp  test_book_transaction.cpp
tests/public/cli/: CMakeLists.txt  test_example.cpp  test_example.h
tests/public/gui/lib/: CMakeLists.txt  mock_accounts_worker_factory.h  mock_categories_worker_factory.h  mock_transactions_worker_factory.h  mock_worker_thread.h  public_accounts_model.h  public_categories_model.h  public_day_model.h  public_generated_transactions_model.h  public_month_model.h  public_qml_account.h  public_qml_book.h  public_qml_category.h  public_qml_recurrent_transaction.h  public_qml_transaction.h  public_recurrent_categories_model.h  public_recurrent_transactions_model.h  test_account.cpp  test_account.h  test_accounts_model.cpp  test_accounts_model.h  test_book.cpp  test_book.h  test_categories_model.cpp  test_categories_model.h  test_category.cpp  test_category.h  test_day_model.cpp  test_day_model.h  test_month_model.cpp  test_month_model.h  test_recurrent_categories_model.cpp  test_recurrent_transaction.cpp  test_recurrent_transaction.h  test_recurrent_transactions_model.cpp  test_recurrent_transactions_model.h  test_transaction.cpp  test_transaction.h
tests/public/gui/lib/models/: CMakeLists.txt  test_accounts.cpp  test_accounts.h  test_categories.cpp  test_day.cpp  test_generated_transactions.cpp  test_generated_transactions.h  test_month.cpp  test_month.h  test_recurrent_categories.cpp  test_recurrent_categories.h  test_recurrent_transactions.cpp  test_recurrent_transactions.h
tests/public/gui/lib/workers/: CMakeLists.txt
tests/public/gui/lib/workers/accounts/: CMakeLists.txt  test_multi_store.cpp  test_multi_store.h  test_single_remove.cpp  test_single_remove.h  test_single_store.cpp  test_single_store.h  test_single_update.cpp  test_single_update.h
tests/public/gui/lib/workers/categories/: CMakeLists.txt  test_multi_store.cpp  test_multi_store.h  test_single_remove.cpp  test_single_remove.h  test_single_store.cpp  test_single_store.h  test_single_update.cpp  test_single_update.h
tests/public/gui/lib/workers/transactions/: CMakeLists.txt  test_generate_recurrent.cpp  test_generate_recurrent.h  test_single_recurrent_remove.cpp  test_single_recurrent_remove.h  test_single_recurrent_update.cpp  test_single_recurrent_update.h  test_single_remove.cpp  test_single_remove.h  test_single_store.cpp  test_single_store.h  test_single_update.cpp  test_single_update.h
(+93 files in other folders)
